Feat/has access annotation (#910)
* feat: implement has access annotation

* feat: implement has access annotation

* feat: add missing roles

* fix

* feat: review

* feat: review

* fix: disable aop

* feat: add unit test

* fix: solve sonar issue

* fix: solve sonar issue

* fix: solve sonar issue

* fix: solve sonar issue

* feat: add all module for privileges

* feat: finish dataset

* feat: finish distribution

* feat: implement security for Geography

* feat: security for series

* feat: remove useless operationId openai attribute

* feat: security for structure

* feat: security for structure

* feat: add security to concept and classification

* fix: remove sonar issue

* feat: finish security

* fix: sonar issues

* feat: add unit test

* fix: sonar issues

* feat: add unit test

* feat: add unit test

* fix: sonar

* fix: sonar

* fix: sonar issue

* fix: solve unit test

* feat: remove security vulnerabilities

* fix: remove unused import